@@ -1,13 +1,21 @@
 package org.opentripplanner.graph_builder.module;
 
-import com.google.common.collect.Iterables;
+import com.google.common.collect.HashMultimap;
+import com.google.common.collect.Multimaps;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.concurrent.atomic.AtomicInteger;
 import org.opentripplanner.graph_builder.DataImportIssueStore;
 import org.opentripplanner.graph_builder.issues.StopNotLinkedForTransfers;
 import org.opentripplanner.graph_builder.services.GraphBuilderModule;
-import org.opentripplanner.model.SimpleTransfer;
+import org.opentripplanner.model.PathTransfer;
 import org.opentripplanner.model.Stop;
-import org.opentripplanner.routing.algorithm.raptor.transit.Transfer;
+import org.opentripplanner.model.StopLocation;
+import org.opentripplanner.routing.algorithm.raptoradapter.transit.Transfer;
 import org.opentripplanner.routing.api.request.RoutingRequest;
+import org.opentripplanner.routing.graph.Edge;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graph.GraphIndex;
 import org.opentripplanner.routing.graphfinder.NearbyStop;
@@ -17,18 +25,12 @@ import org.opentripplanner.util.ProgressTracker;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-
 /**
  * {@link org.opentripplanner.graph_builder.services.GraphBuilderModule} module that links up the stops of a transit
  * network among themselves. This is necessary for routing in long-distance mode.
  *
  * It will use the street network if OSM data has already been loaded into the graph.
  * Otherwise it will use straight-line distance between stops.
- *
- * TODO make tests for this that are sensitive to the presence of trip patterns
  */
 public class DirectTransferGenerator implements GraphBuilderModule {
 
@@ -36,16 +38,19 @@ public class DirectTransferGenerator implements GraphBuilderModule {
 
     final double radiusByDurationInSeconds;
 
+    private final List<RoutingRequest> transferRequests;
+
     public List<String> provides() {
-        return Arrays.asList("linking");
+        return List.of("linking");
     }
 
     public List<String> getPrerequisites() {
-        return Arrays.asList("street to transit");
+        return List.of("street to transit");
     }
 
-    public DirectTransferGenerator (double radiusByDurationInSeconds) {
+    public DirectTransferGenerator (double radiusByDurationInSeconds, List<RoutingRequest> transferRequests) {
         this.radiusByDurationInSeconds = radiusByDurationInSeconds;
+        this.transferRequests = transferRequests;
     }
 
     @Override
@@ -67,59 +72,72 @@ public class DirectTransferGenerator implements GraphBuilderModule {
             LOG.info("Creating direct transfer edges between stops using straight line distance (not streets)...");
         }
 
-        Iterable<TransitStopVertex> stops = graph.getVerticesOfType(TransitStopVertex.class);
+        List<TransitStopVertex> stops = graph.getVerticesOfType(TransitStopVertex.class);
 
         ProgressTracker progress = ProgressTracker.track(
-                "Create transfer edges", 1000, Iterables.size(stops)
+            "Create transfer edges for stops",
+            1000,
+            stops.size()
         );
-        int nTransfersTotal = 0;
-        int nLinkableStops = 0;
 
-        RoutingRequest streetRequest = Transfer.prepareTransferRoutingRequest(new RoutingRequest());
+        AtomicInteger nTransfersTotal = new AtomicInteger();
+        AtomicInteger nLinkedStops = new AtomicInteger();
 
-        // This could be multi-threaded, in which case we'd need to be careful about the lifecycle of NearbyStopFinder instances.
-        for (TransitStopVertex ts0 : stops) {
+        // This is a synchronizedMultimap so that a parallel stream may be used to insert elements.
+        var transfersByStop = Multimaps.<StopLocation, PathTransfer>synchronizedMultimap(HashMultimap.create());
+
+        stops.stream().parallel().forEach(ts0 -> {
+            /* Make transfers to each nearby stop that has lowest weight on some trip pattern.
+             * Use map based on the list of edges, so that only distinct transfers are stored. */
+            Map<TransferKey, PathTransfer> distinctTransfers = new HashMap<>();
             Stop stop = ts0.getStop();
             LOG.debug("Linking stop '{}' {}", stop, ts0);
 
-            /* Make transfers to each nearby stop that is the closest stop on some trip pattern. */
-            int n = 0;
-            for (NearbyStop sd : nearbyStopFinder.findNearbyStopsConsideringPatterns(ts0, streetRequest, false)) {
-                // Skip the origin stop, loop transfers are not needed.
-                if (sd.stop == stop) { continue; }
-                graph.transfersByStop.put(
-                    stop,
-                    new SimpleTransfer(ts0.getStop(), sd.stop, sd.distance, sd.edges)
-                );
-                n += 1;
-            }
-            if (OTPFeature.FlexRouting.isOn()) {
-                // This code is for finding transfers from FlexStopLocations to Stops, transfers
-                // from Stops to FlexStopLocations and between Stops are already covered above.
-                for (NearbyStop sd : nearbyStopFinder.findNearbyStopsConsideringPatterns(ts0,  streetRequest, true)) {
+            for (RoutingRequest transferProfile : transferRequests) {
+                RoutingRequest streetRequest = Transfer.prepareTransferRoutingRequest(transferProfile);
+
+                for (NearbyStop sd : nearbyStopFinder.findNearbyStopsConsideringPatterns(ts0, streetRequest, false)) {
                     // Skip the origin stop, loop transfers are not needed.
-                    if (sd.stop == ts0.getStop()) { continue; }
-                    if (sd.stop instanceof Stop) { continue; }
-                    graph.transfersByStop.put(sd.stop,
-                        new SimpleTransfer(sd.stop, ts0.getStop(), sd.distance, sd.edges)
+                    if (sd.stop == stop) { continue; }
+                    distinctTransfers.put(
+                        new TransferKey(stop, sd.stop, sd.edges),
+                        new PathTransfer(stop, sd.stop, sd.distance, sd.edges)
                     );
-                    n += 1;
+                }
+                if (OTPFeature.FlexRouting.isOn()) {
+                    // This code is for finding transfers from FlexStopLocations to Stops, transfers
+                    // from Stops to FlexStopLocations and between Stops are already covered above.
+                    for (NearbyStop sd : nearbyStopFinder.findNearbyStopsConsideringPatterns(ts0, streetRequest,  true)) {
+                        // Skip the origin stop, loop transfers are not needed.
+                        if (sd.stop == stop) { continue; }
+                        if (sd.stop instanceof Stop) { continue; }
+                        distinctTransfers.put(
+                            new TransferKey(sd.stop, stop, sd.edges),
+                            new PathTransfer(sd.stop, stop, sd.distance, sd.edges)
+                        );
+                    }
                 }
             }
-            LOG.debug("Linked stop {} to {} nearby stops on other patterns.", stop, n);
-            if (n == 0) {
+
+            LOG.debug("Linked stop {} with {} transfers to stops with different patterns.", stop, distinctTransfers.size());
+            if (distinctTransfers.isEmpty()) {
                 issueStore.add(new StopNotLinkedForTransfers(ts0));
+            } else {
+                distinctTransfers.values()
+                        .forEach(transfer -> transfersByStop.put(transfer.from, transfer));
+                nLinkedStops.incrementAndGet();
+                nTransfersTotal.addAndGet(distinctTransfers.size());
             }
-            else {
-                nLinkableStops++;
-            }
+
             //Keep lambda! A method-ref would causes incorrect class and line number to be logged
             //noinspection Convert2MethodRef
             progress.step(m -> LOG.info(m));
-            nTransfersTotal += n;
-        }
+        });
+
+        graph.transfersByStop.putAll(transfersByStop);
+
         LOG.info(progress.completeMessage());
-        LOG.info("Done connecting stops to one another. Created a total of {} transfers from {} stops.", nTransfersTotal, nLinkableStops);
+        LOG.info("Done connecting stops to one another. Created a total of {} transfers from {} stops.", nTransfersTotal, nLinkedStops);
         graph.hasDirectTransfers = true;
     }
 
@@ -128,5 +146,28 @@ public class DirectTransferGenerator implements GraphBuilderModule {
         // No inputs
     }
 
+    private static class TransferKey {
+        private final StopLocation source;
+        private final StopLocation target;
+        private final List<Edge> edges;
 
+        private TransferKey(StopLocation source, StopLocation target, List<Edge> edges) {
+            this.source = source;
+            this.target = target;
+            this.edges = edges;
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) { return true; }
+            if (o == null || getClass() != o.getClass()) { return false; }
+            final TransferKey that = (TransferKey) o;
+            return source.equals(that.source) && target.equals(that.target) && Objects.equals(edges, that.edges);
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(source, target, edges);
+        }
+    }
 }
